--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
     <head>
         <title>Coffee In Africa</title>
         <h1>COFFEE AS A CASH CROP IN AFRICA</h1>
+        <link href="css/styles.css"    rel="stylesheets"      type="text/css">
     </head>
+
+    <body>
+
+    </body>
 </html>
