--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     </head>
 
     <body>
+        <p1>Some of the countries that grow coffee in Africa include:</p1>
+        <ul>
+            <li>Kenya</li>
+            <li>Uganda</li>
+            <li>Rwanda </li>
+            <li>Ethiopia and</li>
+            <li>Nigeria</li>
+        </ul>
+        <h2>Kenya</h2>
+        <p2>All Kenya coffee grown is Arabica coffee grown on the rich volcanic soil that is found in the highlands of the country. Today around 250,000 Kenyans are employed in the production of coffee. Most is produced by small land holders that are members of cooperatives that process their own coffee.</p2>
 
     </body>
 </html>
