--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <br>
         <img  src="Images/kenyancoffeefarm.jpg"    alt="my pics"  width="250"    length="450">
         <img  src="Images/images.jpeg"   alt="pictures"    width="200"    length="300">
+        <br>
+        <p3>Below is a map of Kenya showing some of the areas that grow coffee.</p3>
+        <br>
+        <img  src="Images/Kenya-Growing-Regions-no-logo.webp"    alt="my pic"    width="1000px"    length="1520px">
     
     </body>
 </html>
