--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         <p3>Below is a map of Kenya showing some of the areas that grow coffee.</p3>
         <br>
         <img  src="Images/Kenya-Growing-Regions-no-logo.webp"    alt="my pic"    width="1000px"    length="1520px">
-    
+        <h3>Uganda</h3>
+        <p4>Coffee is a major crop in Uganda, employing about 1.7 million smallholder farmers. The country is unique in that it grows the world's two major commercial coffee species, Robusta and Arabica. Rainfall-sensitive Robusta grows in the lowland regions. Arabica, highly sensitive to temperature, grows in the highlands.</p4>
+         <br>
+        <img  src="Images/index1.jpeg"   alt="my pictures"   width="400"    length="500">
+        <img  src="Images/index3.jpeg"   alt="my pictures"   width="400"    length="500">
+        <br>
+        <p5>Most of the area that grow coffee here are shown in the map below</p5>
+        <br>
+        <img  src="Images/uganda.jpeg"   alt="my pictures"   width="800"    length="1000">
+        <img  
     </body>
 </html>
