--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
             <title>Coffee In Africa</title>
             <h1>COFFEE AS A CASH CROP IN AFRICA</h1>
-            <link href="css/styles.css"    rel="stylesheets"      type="text/css">
+            <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
@@ -33,6 +33,6 @@
         <p5>Most of the area that grow coffee here are shown in the map below</p5>
         <br>
         <img  src="Images/uganda.jpeg"   alt="my pictures"   width="800"    length="1000">
-        <img  
+         
     </body>
 </html>
